2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘parse_revpairs’ accept/pass-through opaque data.

	* rcsutil.c (parse_revpairs): Take arg ‘data’; call ‘put’ with it.
	* base.h (parse_revpairs): Update func decl.
	* rcs.c (putdelrev): Take 4th arg ‘data’; mark it ‘RCS_UNUSED’.
	(main): Update call to ‘parse_revpairs’.
	* rlog.c (putrevpairs): Take 4th arg ‘data’; mark it ‘RCS_UNUSED’.
	(main): Update call to ‘parse_revpairs’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘datelist’, ‘duelst’ from global state of rlog(1).

	* rlog.c (struct date_selection): New.
	(datelist, duelst): Delete vars.
	(extdate, getdatepair): Take 2nd arg ‘datesel’;
	use ‘datesel->in’, ‘datesel->by’.
	(main): Add auto var ‘datesel’; update call to ‘getdatepair’;
	use ‘datsel.by’; update call to ‘extdate’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘lockflag’ from global state of rlog(1).

	* rlog.c (lockflag): Delete var.
	(extractdelta): Add 2nd arg ‘lockflag’.
	(exttree): Likewise; update call to ‘extractdelta’, self.
	(main): Add auto var ‘lockflag’; update call to ‘exttree’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘branchflag’ from global state of rlog(1).

	* rlog.c (branchflag): Delete var.
	(getnumericrev): Take arg BRANCHFLAG.
	(main): Add auto var ‘branchflag’; update call to ‘getnumericrev’.

2011-10-13  Ian Delaney  <della5@iinet.com.au>  (tiny change)

	Fix bug: Make sure rcsgen.c sees ‘makedirtemp’ decl.

	* rcsgen.c: #include "b-feph.h".

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘workptr’, ‘workstat’ from global state of rcsdiff(1).

	* rcsdiff.c (workptr, workstat): Delete vars.
	(struct work): New.
	(cleanup): Take 2nd arg WORK; use ‘work->fro’.
	(main): Add auto var ‘work’; update calls
	to ‘cleanup’; use ‘work.fro’ and ‘work.st’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘workptr’ from global state of rcsclean(1).

	* rcsclean.c (workptr): Delete var.